Updated files - Fixes gradle files - Rewritten widgets to builders - Removed many classes (because it's useless) - Rewritten style AbstractConfigScreen - and more